# heartbeat

./: CLAUDE.md  DEPENDENCIES.md  Makefile  PI5_SETUP.md  README.md  REVIEW_CHECKLIST.md  enable_desktop_mode.sh  fix_audio_crackling.sh  heartbeat.service  main.py  pyproject.toml  set_cpu_performance.sh  setup_headless_mode.sh  setup_pi5.sh  setup_realtime_audio.sh  verify_setup.sh
heartbeat/: heartbeat.kicad_sch  ~heartbeat.kicad_sch.lck
src/: heartbeat.py
